400 and 500 pages ready to rock

--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,103 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+    <title>HYBRID MATTERs</title>
+    <link rel="stylesheet" media="all" href="/assets/application.css" data-turbolinks-track="true" />
 
-  div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
 
-  div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
-
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400italic,300,300italic,400' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <header class='type2'>
+      <a href="/"><div class='before'></div>
+      <div class='grid-container'></div>
+      </a>
+      <nav class='top-bar sticky'>
+        <div class='hor-container'>
+          <div class='row'>
+            <div class='medium-3 columns hide-for-small-only social_icons'>
+              <a target="_blank" class="facebook_link" href="https://www.facebook.com/groups/437255773056631/"><img onmouseover="this.src=&#39;/assets/icon_fb_hover-a6bda45295f30deaf873b3159b26fd30.png&#39;" onmouseout="this.src=&#39;/assets/icon_fb-33c438a92f40689fdfa4e46f15b60e70.png&#39;" src="/assets/icon_fb-33c438a92f40689fdfa4e46f15b60e70.png" alt="Icon fb" /></a>
+              <a target="_blank" class="twitter_link" href="http://twitter.com/hybridmatters"><img onmouseover="this.src=&#39;/assets/icon_twitter_hover-2b8710f0c391d557148d1618fc3bca30.png&#39;" onmouseout="this.src=&#39;/assets/icon_twitter-f2e65baa7f871b33404d53139f5564ab.png&#39;" src="/assets/icon_twitter-f2e65baa7f871b33404d53139f5564ab.png" alt="Icon twitter" /></a>
+              <a class="maillink" href="mailto:info@hybridmatters.net"><img onmouseover="this.src=&#39;/assets/icon_post_hover-f554a4b06d8c3eafc531576c99a38007.png&#39;" onmouseout="this.src=&#39;/assets/icon_post-f692f92d3dd7dc88557affc268922984.png&#39;" src="/assets/icon_post-f692f92d3dd7dc88557affc268922984.png" alt="Icon post" /></a>
+            </div>
+            <div class='medium-6 large-4 small-centered columns'>
+              <div class='row'>
+                <div class='small-4 columns small-text-center'><a href="/pages/about">About</a></div>
+                <div class='small-4 columns small-text-center'><a href="/partners">Partners</a></div>
+                <div class='small-4 columns small-text-center end'><a href="/pages/programme">Programme</a></div>
+              </div>
+            </div>
+          </div>
+          <div class='row down_arrow'>
+            <div class='medium-3 columns hide-for-small-only'>
+              &nbsp;
+              <img src="/assets/selected_down-4df5d75a6c80080c9d4fb01fbd5bce37.png" alt="Selected down" />
+            </div>
+            <div class='medium-6 large-4 small-centered columns'>
+              <div class='row down_arrow'>
+                <div class='small-4 columns text-center'>
+                  &nbsp;
+                </div>
+                <div class='small-4 columns text-center'>
+                  &nbsp;
+                </div>
+                <div class='small-4 columns text-center'>
+                  &nbsp;
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div class='main-container container_404'>
+      <div class='row'>
+          <div class="small-8 columns small-centered">
+            <img src="500.png" align="left">
+            <h2>SOMETHING WENT WRONG</h2>
+            <p>If you want to tell us about it, please contact info@bioartsociety.fi
+          </div>
+        </div>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
-</body>
+    
+    <footer>
+      <div class='row contact_info'>
+        <div class='row'>
+          <div class='small-12 columns text-center'>
+            Contact
+            <br>
+            Bioartsociety | Kaasutehtaankatu 1, 00540 Helsinki, Finland | info@bioartsociety.fi
+          </div>
+        </div>
+      </div>
+      <div class='row logo_strips'>
+        <div class='medium-2 small-offset-1 small-8 medium-left columns'>
+          <div class='row'>
+            <div class='small-12 columns footer_title'>Nordic Cultural Event of the Year</div>
+          </div>
+          <div class='row'>
+            <div class='small-12 columns'><a href="http://www.nordiskkulturfond.org/ "><img src="/assets/logo_norden-fa58ef50fe2903c618cc86ccac682855.png" alt="Logo norden" /></a></div>
+          </div>
+        </div>
+        <div class='medium-9 columns end'>
+          <div class='row'>
+            <div class='small-12 columns footer_title small-text-center'>Partners</div>
+          </div>
+          <div class='row'>
+            <div class='small-12 columns partners small-text-center'>
+              <a target="_blank" href="http://www.bioartsociety.fi/"><img src="/assets/logo_bioarts-712f956186a86aa5691c17c564b08bea.png" alt="Logo bioarts" /></a>
+              <a target="_blank" href="http://www.itu.dk/"><img src="/assets/logo_copenhagen_uni-04a7e74b75a2b0d2e31437196514cea5.png" alt="Logo copenhagen uni" /></a>
+              <a target="_blank" href="http://www.forumbox.fi/"><img src="/assets/logo_forumbox-c1ee1210fb5a7f7c88b32f95a7d1dd95.png" alt="Logo forumbox" /></a>
+              <a target="_blank" href="http://kunsthallgrenland.no/"><img src="/assets/logo_greenland-8fede791fdc8a1d31e496197cdbad6ac.png" alt="Logo greenland" /></a>
+              <a target="_blank" href="http://www.nikolajkunsthal.dk/"><img src="/assets/logo_nikolaj_kunsthall-c166aa4994ff9f43791c19235bbf9ed4.png" alt="Logo nikolaj kunsthall" /></a>
+              <a target="_blank" href="http://www.mah.se/"><img src="/assets/logo_malmo_uni-33203690068cf9bba854ade9203bb556.png" alt="Logo malmo uni" /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
