--- a/public/500.html
+++ b/public/500.html
@@ -5,7 +5,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <title>HYBRID MATTERs</title>
-    <link rel="stylesheet" media="all" href="/assets/application.css" data-turbolinks-track="true" />
+    <link rel="stylesheet" media="all" href="/mini.css" />
 
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:400italic,300,300italic,400' rel='stylesheet' type='text/css'>
