trying once again

--- a/public/500.html
+++ b/public/500.html
@@ -5,7 +5,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <title>HYBRID MATTERs</title>
-    <link rel="stylesheet" media="all" href="/mini.css" />
+    <link rel="stylesheet" media="all" href="application.css" />
 
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:400italic,300,300italic,400' rel='stylesheet' type='text/css'>
@@ -19,9 +19,9 @@
         <div class='hor-container'>
           <div class='row'>
             <div class='medium-3 columns hide-for-small-only social_icons'>
-              <a target="_blank" class="facebook_link" href="https://www.facebook.com/groups/437255773056631/"><img onmouseover="this.src=&#39;/assets/icon_fb_hover-a6bda45295f30deaf873b3159b26fd30.png&#39;" onmouseout="this.src=&#39;/assets/icon_fb-33c438a92f40689fdfa4e46f15b60e70.png&#39;" src="/assets/icon_fb-33c438a92f40689fdfa4e46f15b60e70.png" alt="Icon fb" /></a>
-              <a target="_blank" class="twitter_link" href="http://twitter.com/hybridmatters"><img onmouseover="this.src=&#39;/assets/icon_twitter_hover-2b8710f0c391d557148d1618fc3bca30.png&#39;" onmouseout="this.src=&#39;/assets/icon_twitter-f2e65baa7f871b33404d53139f5564ab.png&#39;" src="/assets/icon_twitter-f2e65baa7f871b33404d53139f5564ab.png" alt="Icon twitter" /></a>
-              <a class="maillink" href="mailto:info@hybridmatters.net"><img onmouseover="this.src=&#39;/assets/icon_post_hover-f554a4b06d8c3eafc531576c99a38007.png&#39;" onmouseout="this.src=&#39;/assets/icon_post-f692f92d3dd7dc88557affc268922984.png&#39;" src="/assets/icon_post-f692f92d3dd7dc88557affc268922984.png" alt="Icon post" /></a>
+              <a target="_blank" class="facebook_link" href="https://www.facebook.com/groups/437255773056631/"><img onmouseover="this.src=&#39;images/icon_fb_hover.png&#39;" onmouseout="this.src=&#39;images/icon_fb.png&#39;" src="images/icon_fb.png" alt="Icon fb" /></a>
+              <a target="_blank" class="twitter_link" href="http://twitter.com/hybridmatters"><img onmouseover="this.src=&#39;images/icon_twitter_hover.png&#39;" onmouseout="this.src=&#39;images/icon_twitterpng&#39;" src="images/icon_twitter.png" alt="Icon twitter" /></a>
+              <a class="maillink" href="mailto:info@hybridmatters.net"><img onmouseover="this.src=&#39;images/icon_post_hover.png&#39;" onmouseout="this.src=&#39;images/icon_post.png&#39;" src="images/icon_post.png" alt="Icon post" /></a>
             </div>
             <div class='medium-6 large-4 small-centered columns'>
               <div class='row'>
@@ -34,7 +34,7 @@
           <div class='row down_arrow'>
             <div class='medium-3 columns hide-for-small-only'>
               &nbsp;
-              <img src="/assets/selected_down-4df5d75a6c80080c9d4fb01fbd5bce37.png" alt="Selected down" />
+              <img src="images/selected_down.png" alt="Selected down" />
             </div>
             <div class='medium-6 large-4 small-centered columns'>
               <div class='row down_arrow'>
@@ -79,7 +79,7 @@
             <div class='small-12 columns footer_title'>Nordic Cultural Event of the Year</div>
           </div>
           <div class='row'>
-            <div class='small-12 columns'><a href="http://www.nordiskkulturfond.org/ "><img src="/assets/logo_norden-fa58ef50fe2903c618cc86ccac682855.png" alt="Logo norden" /></a></div>
+            <div class='small-12 columns'><a href="http://www.nordiskkulturfond.org/ "><img src="images/logo_norden.png" alt="Logo norden" /></a></div>
           </div>
         </div>
         <div class='medium-9 columns end'>
@@ -88,12 +88,12 @@
           </div>
           <div class='row'>
             <div class='small-12 columns partners small-text-center'>
-              <a target="_blank" href="http://www.bioartsociety.fi/"><img src="/assets/logo_bioarts-712f956186a86aa5691c17c564b08bea.png" alt="Logo bioarts" /></a>
-              <a target="_blank" href="http://www.itu.dk/"><img src="/assets/logo_copenhagen_uni-04a7e74b75a2b0d2e31437196514cea5.png" alt="Logo copenhagen uni" /></a>
-              <a target="_blank" href="http://www.forumbox.fi/"><img src="/assets/logo_forumbox-c1ee1210fb5a7f7c88b32f95a7d1dd95.png" alt="Logo forumbox" /></a>
-              <a target="_blank" href="http://kunsthallgrenland.no/"><img src="/assets/logo_greenland-8fede791fdc8a1d31e496197cdbad6ac.png" alt="Logo greenland" /></a>
-              <a target="_blank" href="http://www.nikolajkunsthal.dk/"><img src="/assets/logo_nikolaj_kunsthall-c166aa4994ff9f43791c19235bbf9ed4.png" alt="Logo nikolaj kunsthall" /></a>
-              <a target="_blank" href="http://www.mah.se/"><img src="/assets/logo_malmo_uni-33203690068cf9bba854ade9203bb556.png" alt="Logo malmo uni" /></a>
+              <a target="_blank" href="http://www.bioartsociety.fi/"><img src="images/logo_bioarts.png" alt="Logo bioarts" /></a>
+              <a target="_blank" href="http://www.itu.dk/"><img src="images/logo_copenhagen_uni.png" alt="Logo copenhagen uni" /></a>
+              <a target="_blank" href="http://www.forumbox.fi/"><img src="images/logo_forumbox.png" alt="Logo forumbox" /></a>
+              <a target="_blank" href="http://kunsthallgrenland.no/"><img src="images/logo_greenland.png" alt="Logo greenland" /></a>
+              <a target="_blank" href="http://www.nikolajkunsthal.dk/"><img src="images/logo_nikolaj_kunsthall.png" alt="Logo nikolaj kunsthall" /></a>
+              <a target="_blank" href="http://www.mah.se/"><img src="images/logo_malmo_uni.png" alt="Logo malmo uni" /></a>
             </div>
           </div>
         </div>
