trying error pages again

--- a/public/500.html
+++ b/public/500.html
@@ -19,9 +19,9 @@
         <div class='hor-container'>
           <div class='row'>
             <div class='medium-3 columns hide-for-small-only social_icons'>
-              <a target="_blank" class="facebook_link" href="https://www.facebook.com/groups/437255773056631/"><img onmouseover="this.src=&#39;images/icon_fb_hover.png&#39;" onmouseout="this.src=&#39;images/icon_fb.png&#39;" src="images/icon_fb.png" alt="Icon fb" /></a>
-              <a target="_blank" class="twitter_link" href="http://twitter.com/hybridmatters"><img onmouseover="this.src=&#39;images/icon_twitter_hover.png&#39;" onmouseout="this.src=&#39;images/icon_twitterpng&#39;" src="images/icon_twitter.png" alt="Icon twitter" /></a>
-              <a class="maillink" href="mailto:info@hybridmatters.net"><img onmouseover="this.src=&#39;images/icon_post_hover.png&#39;" onmouseout="this.src=&#39;images/icon_post.png&#39;" src="images/icon_post.png" alt="Icon post" /></a>
+              <a target="_blank" class="facebook_link" href="https://www.facebook.com/groups/437255773056631/"><img onmouseover="this.src=&#39;img/icon_fb_hover.png&#39;" onmouseout="this.src=&#39;img/icon_fb.png&#39;" src="img/icon_fb.png" alt="Icon fb" /></a>
+              <a target="_blank" class="twitter_link" href="http://twitter.com/hybridmatters"><img onmouseover="this.src=&#39;img/icon_twitter_hover.png&#39;" onmouseout="this.src=&#39;img/icon_twitterpng&#39;" src="img/icon_twitter.png" alt="Icon twitter" /></a>
+              <a class="maillink" href="mailto:info@hybridmatters.net"><img onmouseover="this.src=&#39;img/icon_post_hover.png&#39;" onmouseout="this.src=&#39;img/icon_post.png&#39;" src="img/icon_post.png" alt="Icon post" /></a>
             </div>
             <div class='medium-6 large-4 small-centered columns'>
               <div class='row'>
@@ -34,7 +34,7 @@
           <div class='row down_arrow'>
             <div class='medium-3 columns hide-for-small-only'>
               &nbsp;
-              <img src="images/selected_down.png" alt="Selected down" />
+              <img src="img/selected_down.png" alt="Selected down" />
             </div>
             <div class='medium-6 large-4 small-centered columns'>
               <div class='row down_arrow'>
@@ -79,7 +79,7 @@
             <div class='small-12 columns footer_title'>Nordic Cultural Event of the Year</div>
           </div>
           <div class='row'>
-            <div class='small-12 columns'><a href="http://www.nordiskkulturfond.org/ "><img src="images/logo_norden.png" alt="Logo norden" /></a></div>
+            <div class='small-12 columns'><a href="http://www.nordiskkulturfond.org/ "><img src="img/logo_norden.png" alt="Logo norden" /></a></div>
           </div>
         </div>
         <div class='medium-9 columns end'>
@@ -88,12 +88,12 @@
           </div>
           <div class='row'>
             <div class='small-12 columns partners small-text-center'>
-              <a target="_blank" href="http://www.bioartsociety.fi/"><img src="images/logo_bioarts.png" alt="Logo bioarts" /></a>
-              <a target="_blank" href="http://www.itu.dk/"><img src="images/logo_copenhagen_uni.png" alt="Logo copenhagen uni" /></a>
-              <a target="_blank" href="http://www.forumbox.fi/"><img src="images/logo_forumbox.png" alt="Logo forumbox" /></a>
-              <a target="_blank" href="http://kunsthallgrenland.no/"><img src="images/logo_greenland.png" alt="Logo greenland" /></a>
-              <a target="_blank" href="http://www.nikolajkunsthal.dk/"><img src="images/logo_nikolaj_kunsthall.png" alt="Logo nikolaj kunsthall" /></a>
-              <a target="_blank" href="http://www.mah.se/"><img src="images/logo_malmo_uni.png" alt="Logo malmo uni" /></a>
+              <a target="_blank" href="http://www.bioartsociety.fi/"><img src="img/logo_bioarts.png" alt="Logo bioarts" /></a>
+              <a target="_blank" href="http://www.itu.dk/"><img src="img/logo_copenhagen_uni.png" alt="Logo copenhagen uni" /></a>
+              <a target="_blank" href="http://www.forumbox.fi/"><img src="img/logo_forumbox.png" alt="Logo forumbox" /></a>
+              <a target="_blank" href="http://kunsthallgrenland.no/"><img src="img/logo_greenland.png" alt="Logo greenland" /></a>
+              <a target="_blank" href="http://www.nikolajkunsthal.dk/"><img src="img/logo_nikolaj_kunsthall.png" alt="Logo nikolaj kunsthall" /></a>
+              <a target="_blank" href="http://www.mah.se/"><img src="img/logo_malmo_uni.png" alt="Logo malmo uni" /></a>
             </div>
           </div>
         </div>
