--- a/public/500.html
+++ b/public/500.html
@@ -5,7 +5,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <title>HYBRID MATTERs</title>
-    <link rel="stylesheet" media="all" href="application.css" />
+    <link rel="stylesheet" media="all" href="/public.css" />
 
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:400italic,300,300italic,400' rel='stylesheet' type='text/css'>
@@ -19,9 +19,9 @@
         <div class='hor-container'>
           <div class='row'>
             <div class='medium-3 columns hide-for-small-only social_icons'>
-              <a target="_blank" class="facebook_link" href="https://www.facebook.com/groups/437255773056631/"><img onmouseover="this.src=&#39;img/icon_fb_hover.png&#39;" onmouseout="this.src=&#39;img/icon_fb.png&#39;" src="img/icon_fb.png" alt="Icon fb" /></a>
-              <a target="_blank" class="twitter_link" href="http://twitter.com/hybridmatters"><img onmouseover="this.src=&#39;img/icon_twitter_hover.png&#39;" onmouseout="this.src=&#39;img/icon_twitterpng&#39;" src="img/icon_twitter.png" alt="Icon twitter" /></a>
-              <a class="maillink" href="mailto:info@hybridmatters.net"><img onmouseover="this.src=&#39;img/icon_post_hover.png&#39;" onmouseout="this.src=&#39;img/icon_post.png&#39;" src="img/icon_post.png" alt="Icon post" /></a>
+              <a target="_blank" class="facebook_link" href="https://www.facebook.com/groups/437255773056631/"><img onmouseover="this.src=&#39;/img/icon_fb_hover.png&#39;" onmouseout="this.src=&#39;/img/icon_fb.png&#39;" src="img/icon_fb.png" alt="Icon fb" /></a>
+              <a target="_blank" class="twitter_link" href="http://twitter.com/hybridmatters"><img onmouseover="this.src=&#39;/img/icon_twitter_hover.png&#39;" onmouseout="this.src=&#39;/img/icon_twitterpng&#39;" src="/img/icon_twitter.png" alt="Icon twitter" /></a>
+              <a class="maillink" href="mailto:info@hybridmatters.net"><img onmouseover="this.src=&#39;/img/icon_post_hover.png&#39;" onmouseout="this.src=&#39;/img/icon_post.png&#39;" src="/img/icon_post.png" alt="Icon post" /></a>
             </div>
             <div class='medium-6 large-4 small-centered columns'>
               <div class='row'>
@@ -34,7 +34,7 @@
           <div class='row down_arrow'>
             <div class='medium-3 columns hide-for-small-only'>
               &nbsp;
-              <img src="img/selected_down.png" alt="Selected down" />
+              <img src="/img/selected_down.png" alt="Selected down" />
             </div>
             <div class='medium-6 large-4 small-centered columns'>
               <div class='row down_arrow'>
@@ -56,7 +56,7 @@
     <div class='main-container container_404'>
       <div class='row'>
           <div class="small-8 columns small-centered">
-            <img src="500.png" align="left">
+            <img src="/500.png" align="left">
             <h2>SOMETHING WENT WRONG</h2>
             <p>If you want to tell us about it, please contact info@bioartsociety.fi
           </div>
@@ -79,7 +79,7 @@
             <div class='small-12 columns footer_title'>Nordic Cultural Event of the Year</div>
           </div>
           <div class='row'>
-            <div class='small-12 columns'><a href="http://www.nordiskkulturfond.org/ "><img src="img/logo_norden.png" alt="Logo norden" /></a></div>
+            <div class='small-12 columns'><a href="http://www.nordiskkulturfond.org/ "><img src="/img/logo_norden.png" alt="Logo norden" /></a></div>
           </div>
         </div>
         <div class='medium-9 columns end'>
@@ -88,12 +88,12 @@
           </div>
           <div class='row'>
             <div class='small-12 columns partners small-text-center'>
-              <a target="_blank" href="http://www.bioartsociety.fi/"><img src="img/logo_bioarts.png" alt="Logo bioarts" /></a>
-              <a target="_blank" href="http://www.itu.dk/"><img src="img/logo_copenhagen_uni.png" alt="Logo copenhagen uni" /></a>
-              <a target="_blank" href="http://www.forumbox.fi/"><img src="img/logo_forumbox.png" alt="Logo forumbox" /></a>
-              <a target="_blank" href="http://kunsthallgrenland.no/"><img src="img/logo_greenland.png" alt="Logo greenland" /></a>
-              <a target="_blank" href="http://www.nikolajkunsthal.dk/"><img src="img/logo_nikolaj_kunsthall.png" alt="Logo nikolaj kunsthall" /></a>
-              <a target="_blank" href="http://www.mah.se/"><img src="img/logo_malmo_uni.png" alt="Logo malmo uni" /></a>
+              <a target="_blank" href="http://www.bioartsociety.fi/"><img src="/img/logo_bioarts.png" alt="Logo bioarts" /></a>
+              <a target="_blank" href="http://www.itu.dk/"><img src="/img/logo_copenhagen_uni.png" alt="Logo copenhagen uni" /></a>
+              <a target="_blank" href="http://www.forumbox.fi/"><img src="/img/logo_forumbox.png" alt="Logo forumbox" /></a>
+              <a target="_blank" href="http://kunsthallgrenland.no/"><img src="/img/logo_greenland.png" alt="Logo greenland" /></a>
+              <a target="_blank" href="http://www.nikolajkunsthal.dk/"><img src="/img/logo_nikolaj_kunsthall.png" alt="Logo nikolaj kunsthall" /></a>
+              <a target="_blank" href="http://www.mah.se/"><img src="/img/logo_malmo_uni.png" alt="Logo malmo uni" /></a>
             </div>
           </div>
         </div>
