--- a/public/500.html
+++ b/public/500.html
@@ -19,7 +19,7 @@
         <div class='hor-container'>
           <div class='row'>
             <div class='medium-3 columns hide-for-small-only social_icons'>
-              <a target="_blank" class="facebook_link" href="https://www.facebook.com/groups/437255773056631/"><img onmouseover="this.src=&#39;/img/icon_fb_hover.png&#39;" onmouseout="this.src=&#39;/img/icon_fb.png&#39;" src="img/icon_fb.png" alt="Icon fb" /></a>
+              <a target="_blank" class="facebook_link" href="https://www.facebook.com/groups/437255773056631/"><img onmouseover="this.src=&#39;/img/icon_fb_hover.png&#39;" onmouseout="this.src=&#39;/img/icon_fb.png&#39;" src="/img/icon_fb.png" alt="Icon fb" /></a>
               <a target="_blank" class="twitter_link" href="http://twitter.com/hybridmatters"><img onmouseover="this.src=&#39;/img/icon_twitter_hover.png&#39;" onmouseout="this.src=&#39;/img/icon_twitterpng&#39;" src="/img/icon_twitter.png" alt="Icon twitter" /></a>
               <a class="maillink" href="mailto:info@hybridmatters.net"><img onmouseover="this.src=&#39;/img/icon_post_hover.png&#39;" onmouseout="this.src=&#39;/img/icon_post.png&#39;" src="/img/icon_post.png" alt="Icon post" /></a>
             </div>
